# hft_simulation

./: CMakeLists.txt  README.md
include/: market_data_feed.h  order_book.h  trading_strategy.h
src/: main.cpp  mock_market_data_feed.cpp  simple_order_book.cpp  trading_strategy.cpp
